Vista para agregar empleado
Se creó la vista y se llama desde un "botón", se arregló el desacomodo que tenía la tabla cuando se mostraban los empleados.
Falta recortar un poco el div para que se vea más el botón.

--- a/Solucion_Tarea1_BD1/Tarea1_BD1/Tarea1_BD1.csproj
+++ b/Solucion_Tarea1_BD1/Tarea1_BD1/Tarea1_BD1.csproj
@@ -14,4 +14,12 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Empleado\Agregar.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Empleado\Agregar.cshtml" />
+  </ItemGroup>
+
 </Project>
